trying a different tagging scheme

--- a/circle.yml
+++ b/circle.yml
@@ -19,10 +19,8 @@ machine:
 
 dependencies:
   override:
-    - BUILD_TAG={CIRCLE_BRANCH}-{CIRCLE_SHA1}
-    - echo $BUILD_TAG
-    - docker info
-    - docker build -t python-service:{CIRCLE_BRANCH}-{CIRCLE_SHA1} .
+    - BUILD_TAG=$(echo $CIRCLE_BRANCH | tr '/' '')-$CIRCLE_SHA1
+    - docker build -t python-service:$BUILD_TAG .
 
 test:
   override:
@@ -32,7 +30,7 @@ deployment:
   hub:
     branch: feature/circleci
     commands:
-      - echo $BUILD_TAG
+      - BUILD_TAG=$(echo $CIRCLE_BRANCH | tr '/' '')-$CIRCLE_SHA1
       - eval $(aws ecr get-login --region us-east-1)
-      - docker tag python-service:{CIRCLE_BRANCH}-{CIRCLE_SHA1} 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:{CIRCLE_BRANCH}-{CIRCLE_SHA1}
-      - docker push 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:{CIRCLE_BRANCH}-{CIRCLE_SHA1}
+      - docker tag python-service:$BUILD_TAG 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$BUILD_TAG
+      - docker push 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$BUILD_TAG
