fixing tag definition

--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,7 @@ machine:
 
 dependencies:
   override:
-    - BUILD_TAG=$(echo $CIRCLE_BRANCH | tr '/' '')-$CIRCLE_SHA1
+    - BUILD_TAG=$(echo $CIRCLE_BRANCH | tr '/' '_')-$CIRCLE_SHA1
     - docker build -t python-service:$BUILD_TAG .
 
 test:
@@ -30,7 +30,7 @@ deployment:
   hub:
     branch: feature/circleci
     commands:
-      - BUILD_TAG=$(echo $CIRCLE_BRANCH | tr '/' '')-$CIRCLE_SHA1
+      - BUILD_TAG=$(echo $CIRCLE_BRANCH | tr '/' '_')-$CIRCLE_SHA1
       - eval $(aws ecr get-login --region us-east-1)
       - docker tag python-service:$BUILD_TAG 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$BUILD_TAG
       - docker push 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$BUILD_TAG
