--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,13 @@
 #
-# CircleCI Configuration for publishing a Python service using AWS CodeDeploy.
+# CircleCI Configuration for publishing a base docker image for Python services to Amazon ecr.
 #
 #
-# - This script will require setting the $GEMFURY_REPO_URL in CircleCI,
-#    under Project Settings -> Environment Variables.
-# - Using `pip install` with --extra-index-url below allows for package dependencies
-#   using the private repository as well.
-# - We use nose for running unit-tests below using `python setup.py nosetests`
-# - See the 'codedeploy' section under 'deployment' for appropriate mappings between the different
-#   code branches (master, develop) and AWS CodeDeploy Deployment Groups / settings
-# - Make sure to include the build.sh script used below in your codebase, available here:
-#       https://gist.github.com/adamhadani/e79dcf9bf676a2f4d298
+# - This script requires:
+#     - CIRCLE_SHA1: the commit associated with this build (available in all circleci builds)
+#     - CIRCLE_BRANCH: the branch associated with this commit (available in all circleci builds)
+#     - ECR_INSTANCE_ID: the id of your Amazon ECR instance
+#     - ECR_DOMAIN: The domain associated with AWS ECR.
+#     - aws credentials
 #
 ########################################################################################################
 machine:
@@ -30,7 +27,7 @@ deployment:
     branch: feature/circleci
     commands:
       - eval $(aws ecr get-login --region us-east-1)
-      - docker tag python-service:$CIRCLE_SHA1 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$CIRCLE_SHA1
-      - docker tag python-service:$CIRCLE_SHA1 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$(echo $CIRCLE_BRANCH | tr '/' '_')
-      - docker push 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$CIRCLE_SHA1
-      - docker push 021749107756.dkr.ecr.us-east-1.amazonaws.com/python-service:$(echo $CIRCLE_BRANCH | tr '/' '_')
+      - docker tag python-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:$CIRCLE_SHA1
+      - docker tag python-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:"${CIRCLE_BRANCH/\//z}"
+      - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:$CIRCLE_SHA1
+      - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:"${CIRCLE_BRANCH/\//z}"
