--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ machine:
 dependencies:
   override:
     - docker build -t python-service:$CIRCLE_SHA1 .
+    - docker build -t python3-service:$CIRCLE_SHA1 --build-arg PY_MAJOR=3 .
 
 test:
   override:
@@ -23,6 +24,10 @@ deployment:
       - docker tag python-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:"${CIRCLE_BRANCH/\//_}"
       - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:$CIRCLE_SHA1
       - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:"${CIRCLE_BRANCH/\//_}"
+      - docker tag python3-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:$CIRCLE_SHA1
+      - docker tag python3-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:"${CIRCLE_BRANCH/\//_}"
+      - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:$CIRCLE_SHA1
+      - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:"${CIRCLE_BRANCH/\//_}"
   release:
     branch: master
     commands:
@@ -31,3 +36,7 @@ deployment:
       - docker tag python-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:"${CIRCLE_BRANCH/\//_}"
       - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:$CIRCLE_SHA1
       - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:"${CIRCLE_BRANCH/\//_}"
+      - docker tag python3-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:$CIRCLE_SHA1
+      - docker tag python3-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:"${CIRCLE_BRANCH/\//_}"
+      - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:$CIRCLE_SHA1
+      - docker push $ECR_INSTANCE_ID.$ECR_DOMAIN/python3-service:"${CIRCLE_BRANCH/\//_}"
