--- a/circle.yml
+++ b/circle.yml
@@ -17,7 +17,7 @@ test:
 
 deployment:
   dev:
-    branch: develop
+    branch: feature/update-pip-packages
     commands:
       - eval $(aws ecr get-login --region us-east-1)
       - docker tag python-service:$CIRCLE_SHA1 $ECR_INSTANCE_ID.$ECR_DOMAIN/python-service:$CIRCLE_SHA1
